# learning-c

./: .editorconfig  .gitignore  README.md
07-001-start/: hello.c
07-002-printf/: main.c
07-003-sizeof/: main.c
11-001-head-file/: main.c  min.h
11-001-many-file/: main.c
11-002-head-file/: main.c  max.h
11-003-make-file/: Makefile  main.c  min.c
11-004-args-return/: main.c
11-005-stdin-stdout-stderr/: main.c
12-001-stream-redirect/: err.txt  main.c  out.txt
12-002-pipeline/: avg.c  note.md
12-004-pointer-size/: main.c
12-005-gdb/: value-swap-err.c
20180716-start/: hello.c
20200101-struct/: main  main.c
example/gdb-use/: note.md
example/make-file/: max.c
example/pthread/: main.c
example/read-file/: main2.c
example/stream-in-out-err/: main.c
example/stream-pipeline/: input.c
example/stream-redirect/: main.c
learning-c/07-002-printf/: main.c
learning-c/11-002-head-file/: main.c
learning-c/12-003-pointer/: note.md  value-swap.c
learning-c/12-004-pointer-size/: main.c
learning-cpp/01-getting-start/: CMakeLists.txt
libuv-study/: README.md
libuv-study/01-getting-start-uv/: main.c
libuv-study/02-idling/: main.c
libuv-study/03-fs-read/: CMakeLists.txt  main.c
libuv-study/getting-start-uv/: CMakeLists.txt
problem/problem1002/: main.c
problem/problem1014/: main.c
problem/problem1022/: main.c
problem/problem1051/: main.c
problem1022/: main.c
pthread/: main.c
read-file/: main.c
socket/: socket_server_tcp.c  socket_server_tcp_pthread.c
workspace/: main.c  main.h
